--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -11,7 +11,7 @@
       <mj-column>
         <mj-image
           href="https://misterbamboostraws.com"
-          src="https://misterbamboostraws.com/wp-content/uploads/2021/07/Header-logo-144x144-min.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemoz/master/mbs/assets/logo.png"
           alt=""
           width="64px"
           padding="0"
@@ -114,7 +114,7 @@
     <mj-section background-color="#171717" padding="0">
       <mj-column>
         <mj-image
-          src="https://misterbamboostraws.com/wp-content/uploads/2021/06/Straws-bundled-800x450-min.jpg"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemoz/master/mbs/assets/re-usable.jpg"
           alt=""
           fluid-on-mobile="true"
         />
