--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -924,6 +924,7 @@
     <mj-section background-color="#FFFFFF" padding="0" padding-top="24px">
       <mj-column>
         <mj-image
+          href="https://misterbamboostraws.com"
           src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/mbs/assets/logo.png"
           alt=""
           width="64px"
