--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -1,8 +1,8 @@
 <mjml>
   <mj-head>
     <mj-font
-      name="Josefin Sans"
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600&display=swap"
+      name="AceSans"
+      href="https://github.com/nrjdalal/emaildemo/blob/master/mbs/fonts/AceSansRegular.woff?raw=true"
     />
   </mj-head>
 
@@ -25,7 +25,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -79,7 +79,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -89,7 +89,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -100,7 +100,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -124,7 +124,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -136,7 +136,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -159,7 +159,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -171,7 +171,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -194,7 +194,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -206,7 +206,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -229,7 +229,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -241,7 +241,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -264,7 +264,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -276,7 +276,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -299,7 +299,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -311,7 +311,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -334,7 +334,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="20px"
           font-weight="500"
           text-transform="uppercase"
@@ -346,7 +346,7 @@
           color="#FFFFFF"
           align="left"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
@@ -366,7 +366,7 @@
             color="#FFFFFF"
             align="left"
             line-height="1.4"
-            font-family="'Josefin Sans', sans-serif;"
+            font-family="'AceSans', sans-serif;"
             font-size="20px"
             font-weight="500"
             text-transform="uppercase"
@@ -385,7 +385,7 @@
             color="#FFFFFF"
             align="left"
             line-height="1.4"
-            font-family="'Josefin Sans', sans-serif;"
+            font-family="'AceSans', sans-serif;"
             font-size="20px"
             font-weight="500"
             text-transform="uppercase"
@@ -404,7 +404,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -414,7 +414,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -425,7 +425,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -454,7 +454,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -470,7 +470,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -482,7 +482,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -503,7 +503,7 @@
           ><mj-text
             align="left"
             line-height="1.4"
-            font-family="'Josefin Sans', sans-serif;"
+            font-family="'AceSans', sans-serif;"
             font-size="20px"
             font-weight="500"
             text-transform="uppercase"
@@ -522,7 +522,7 @@
           ><mj-text
             align="left"
             line-height="1.4"
-            font-family="'Josefin Sans', sans-serif;"
+            font-family="'AceSans', sans-serif;"
             font-size="20px"
             font-weight="500"
             text-transform="uppercase"
@@ -540,7 +540,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -550,7 +550,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -561,7 +561,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -588,7 +588,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -599,7 +599,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -630,7 +630,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -640,7 +640,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -651,7 +651,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -683,7 +683,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -694,7 +694,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -722,7 +722,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -732,7 +732,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -743,7 +743,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -786,7 +786,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -796,7 +796,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -807,7 +807,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -833,7 +833,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -844,7 +844,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -870,7 +870,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -881,7 +881,7 @@
           color="#171717"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -908,7 +908,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="30px"
           font-weight="600"
         >
@@ -918,7 +918,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="16px"
           font-weight="500"
           text-transform="uppercase"
@@ -931,7 +931,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="14px"
           font-weight="400"
         >
@@ -989,7 +989,7 @@
           color="#FFFFFF"
           align="center"
           line-height="1.4"
-          font-family="'Josefin Sans', sans-serif;"
+          font-family="'AceSans', sans-serif;"
           font-size="12px"
           font-weight="400"
         >
